Fix message container overlap on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -381,3 +381,9 @@ p {
         margin-top: 0.5rem;
     }
 }
+
+@media (max-width: 378px) {
+    .message-container {
+        width: 91vw;
+    }
+}
